contracts/build_full.txt
Compiling 91 files with Solc 0.8.33
Solc 0.8.33 finished in 2.03s
Error: Compiler run failed:
Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdStorage.sol:225:13:
    |
225 |             assembly {
    |             ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdStorage.sol:288:9:
    |
288 |         assembly {
    |         ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdStorage.sol:371:13:
    |
371 |             assembly {
    |             ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
  --> lib/forge-std/src/console.sol:11:9:
   |
11 |         assembly {
   |         ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
  --> lib/forge-std/src/console2.sol:28:9:
   |
28 |         assembly {
   |         ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdChains.sol:179:21:
    |
179 |                     assembly {
    |                     ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdCheats.sol:493:9:
    |
493 |         assembly {
    |         ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdCheats.sol:503:9:
    |
503 |         assembly {
    |         ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdCheats.sol:514:9:
    |
514 |         assembly {
    |         ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdCheats.sol:524:9:
    |
524 |         assembly {
    |         ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/forge-std/src/StdUtils.sol:209:9:
    |
209 |         assembly {
    |         ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/openzeppelin-contracts/contracts/utils/Address.sol:236:13:
    |
236 |             assembly {
    |             ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
  --> lib/openzeppelin-contracts/contracts/utils/Strings.sol:25:13:
   |
25 |             assembly {
   |             ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
  --> lib/openzeppelin-contracts/contracts/utils/Strings.sol:31:17:
   |
31 |                 assembly {
   |                 ^ (Relevant source part starts here and spans across multiple lines).

Warning (2424): Natspec memory-safe-assembly special comment for inline assembly is deprecated and scheduled for removal. Use the memory-safe block annotation instead.
   --> lib/openzeppelin-contracts/contracts/token/ERC721/ERC721.sol:413:21:
    |
413 |                     assembly {
    |                     ^ (Relevant source part starts here and spans across multiple lines).

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x356d97d0991A55db1f83c061eF318eE68598748e". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x356d97d0991A55db1f83c061eF318eE68598748e". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> script/DeployRSC.s.sol:14:37:
   |
14 |         address sepoliaWalletSwap = 0x356d97d0991a55db1f83c061ef318ee68598748e; 
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x555346d562F55de7963375dB522580653F0d3A5f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x555346d562F55de7963375dB522580653F0d3A5f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> script/DeployRSC.s.sol:17:35:
   |
17 |         address lasnaWalletSwap = 0x555346d562f55de7963375db522580653f0d3a5f;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
